everything is fine

--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.18",
-    "@chakra-ui/react": "^2.5.5",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@chakra-ui/icons": "^2.0.15",
+    "@chakra-ui/react": "^2.4.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^10.12.4",
-    "md": "^0.6.0",
+    "aos": "^2.3.4",
+    "framer-motion": "^8.0.2",
+    "gh-pages": "^5.0.0",
+    "lottie-react": "^2.3.1",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.5.2",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-router-dom": "^6.10.0",
+    "react-github-calendar": "^3.4.0",
+    "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
-    "spy-property-reads": "^1.0.3",
+    "react-scroll-to-top": "^3.0.0",
+    "react-wavify": "^1.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
